--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -8,7 +8,7 @@ Localization
 	
 	// Used for multiple parts
 		#autoLOC_US_Appearance = Внешний вид
-		#autoLOC_US_CentralPayload = Центральная полезная нагрузка
+		#autoLOC_US_CentralPayload = Центр. пол.нагрузка
 		#autoLOC_US_Configuration = Конфигурация
 		#autoLOC_US_Core = Основа
 		#autoLOC_US_CrewTransferTunnel = Проход для экипажа
@@ -16,7 +16,7 @@ Localization
 		#autoLOC_US_Function = Функция
 		#autoLOC_US_FuelSwitch = Переключатель топлива
 		#autoLOC_US_FuelTank = Топливный бак
-		#autoLOC_US_FuelTankSetupsAvailable = Доступные настройки топливного бака:
+		#autoLOC_US_FuelTankSetupsAvailable = Настройки топливного бака:
 		#autoLOC_US_FuelVariants = Виды топлива
 		
 		#autoLOC_US_Height = Высота
@@ -46,14 +46,14 @@ Localization
 		#autoLOC_US_TogglePrimaryBays = Переключить первичный отсек
 		#autoLOC_US_LockPrimaryBays = Заблокировать первичный отсек
 		#autoLOC_US_UnlockPrimaryBays = Разблокировать первичный отсек
-		#autoLOC_US_PrimaryBayDeployLimit = Предел раскрытия первичного отсека
+		#autoLOC_US_PrimaryBayDeployLimit = Предел раскрытия перв. отсека
 		
 		#autoLOC_US_DeploySecondaryBays = Открыть вторичный отсек
 		#autoLOC_US_RetractSecondaryBays = Закрыть вторичный отсек
 		#autoLOC_US_ToggleSecondaryBays = Переключатель вторичный отсек
 		#autoLOC_US_LockSecondaryBays = Заблокировать вторичный отсек
 		#autoLOC_US_UnlockSecondaryBays = Разблокировать вторичный отсек
-		#autoLOC_US_SecondaryBayDeployLimit = Предел раскрытия вторичного отсека
+		#autoLOC_US_SecondaryBayDeployLimit = Предел раскрытия втор. отсека
 		
 		#autoLOC_US_DeployAntenna = Развертывание антенны
 		#autoLOC_US_RetractAntenna = Свертывание антенны
