--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -8,24 +8,24 @@ Localization
 	
 	// Used for multiple parts
 		#autoLOC_US_Appearance = Внешний вид
-		#autoLOC_US_CentralPayload = Центр. пол.нагрузка
+		#autoLOC_US_CentralPayload = Центр
 		#autoLOC_US_Configuration = Конфигурация
 		#autoLOC_US_Core = Основа
 		#autoLOC_US_CrewTransferTunnel = Проход для экипажа
 		#autoLOC_US_Decouple = Разъединение
 		#autoLOC_US_Function = Функция
-		#autoLOC_US_FuelSwitch = Переключатель топлива
+		#autoLOC_US_FuelSwitch = Переключить топливо
 		#autoLOC_US_FuelTank = Топливный бак
-		#autoLOC_US_FuelTankSetupsAvailable = Настройки топливного бака:
+		#autoLOC_US_FuelTankSetupsAvailable = Варианты:
 		#autoLOC_US_FuelVariants = Виды топлива
 		
 		#autoLOC_US_Height = Высота
 		#autoLOC_US_HeightAndFunction = Высота и функция	
-		#autoLOC_US_HeightVariantsAvalable = Доступные варианты высоты:	
+		#autoLOC_US_HeightVariantsAvalable = Варианты:	
 		
 		#autoLOC_US_Manufacturer = New Horizons & Nox Industrial
-		#autoLOC_US_PartVariants = Доступные варианты деталей:	
-		#autoLOC_US_PayloadBay = Отсек полезной нагрузки	
+		#autoLOC_US_PartVariants = Варианты:	
+		#autoLOC_US_PayloadBay = Грузовой отсек	
 	
 		#autoLOC_US_Resource = Ресурс
 		#autoLOC_US_Status = Статус
