--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -3,7 +3,7 @@
 Localization
 {
 	// Russian
-	ru-ru
+	ru
 	{
 	
 	// Used for multiple parts
@@ -30,37 +30,37 @@ Localization
 		#autoLOC_US_Resource = Ресурс
 		#autoLOC_US_Status = Статус
 		#autoLOC_US_Structural = Структурный
-		#autoLOC_US_SwitchControl = Переключить управление
+		#autoLOC_US_SwitchControl = Перекл. управление
 		#autoLOC_US_TankOptions = Опции бака
-		#autoLOC_US_ToggleDetails = Переключатель детали
+		#autoLOC_US_ToggleDetails = Перекл. детали
 		#autoLOC_US_WedgeBracket = Клиновый кронштейн
 	
-		#autoLOC_US_DoubleHeight = Двойной
-		#autoLOC_US_SingleHeight = Одинарной
-		#autoLOC_US_TripleHeight = Тройной
-		#autoLOC_US_QuadHeight = Четверной	
+		#autoLOC_US_DoubleHeight = Двойная
+		#autoLOC_US_SingleHeight = Одинарная
+		#autoLOC_US_TripleHeight = Тройная
+		#autoLOC_US_QuadHeight = Четверная	
 
 	// Payload bays
 		#autoLOC_US_DeployPrimaryBays = Открыть первичный отсек
 		#autoLOC_US_RetractPrimaryBays = Закрыть первичный отсек
-		#autoLOC_US_TogglePrimaryBays = Переключить первичный отсек
-		#autoLOC_US_LockPrimaryBays = Заблокировать первичный отсек
-		#autoLOC_US_UnlockPrimaryBays = Разблокировать первичный отсек
-		#autoLOC_US_PrimaryBayDeployLimit = Предел раскрытия перв. отсека
+		#autoLOC_US_TogglePrimaryBays = Перекл. первичный отсек
+		#autoLOC_US_LockPrimaryBays = Заблок. первичный отсек
+		#autoLOC_US_UnlockPrimaryBays = Разблок. первичный отсек
+		#autoLOC_US_PrimaryBayDeployLimit = Раскрытие перв. отсека
 		
 		#autoLOC_US_DeploySecondaryBays = Открыть вторичный отсек
 		#autoLOC_US_RetractSecondaryBays = Закрыть вторичный отсек
-		#autoLOC_US_ToggleSecondaryBays = Переключатель вторичный отсек
-		#autoLOC_US_LockSecondaryBays = Заблокировать вторичный отсек
-		#autoLOC_US_UnlockSecondaryBays = Разблокировать вторичный отсек
-		#autoLOC_US_SecondaryBayDeployLimit = Предел раскрытия втор. отсека
+		#autoLOC_US_ToggleSecondaryBays = Перекл. вторичный отсек
+		#autoLOC_US_LockSecondaryBays = Заблок. вторичный отсек
+		#autoLOC_US_UnlockSecondaryBays = Разблок. вторичный отсек
+		#autoLOC_US_SecondaryBayDeployLimit = Раскрытие втор. отсека
 		
-		#autoLOC_US_DeployAntenna = Развертывание антенны
-		#autoLOC_US_RetractAntenna = Свертывание антенны
+		#autoLOC_US_DeployAntenna = Развернуть антенну
+		#autoLOC_US_RetractAntenna = Свернуть антенны
 		
 		#autoLOC_US_DeployAllBays = Открыть все отсеки
 		#autoLOC_US_RetractAllBays = Закрыть все отсеки
-		#autoLOC_US_ToggleAllBays = Переключить все отсеки
+		#autoLOC_US_ToggleAllBays = Перекл. все отсеки
 		
 		#autoLOC_US_PrimaryBayObstruction = Обнаружено препятствие:\n<<1>> заблокирована дверь первичного отсека <<2>>.\nПожалуйста очистите объект перед закрытием.
 		#autoLOC_US_SecondaryBayObstruction = Обнаружено препятствие:\n<<1>> заблокирована дверь вторичного отсека <<2>>.\nПожалуйста очистите объект перед закрытием.
