--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -106,10 +106,10 @@ Localization
 				#autoLOC_US_BatteryWedge_Description = Аккумуляторная батарея выполненная в клиновидном исполнении для монтажа на Universal Storage основе.  Двунаправленные линии электропередач позволяют подзаряжать на месте, или весь клин можно удалить на EVA и разместить с новым оборудованием или хранилищем. Доступны четыре варианта размера.
 				
 			// FuelCell Both	
-				#autoLOC_US_FuelTankCell = Fuel Cell
-				#autoLOC_US_StartFuelCell = Start Fuel Cell
-				#autoLOC_US_StopFuelCell =	Stop Fuel Cell
-				#autoLOC_US_ToggleFuelCell = Toggle Fuel Cell
+				#autoLOC_US_FuelTankCell = Топливная ячейка
+				#autoLOC_US_StartFuelCell = Вкл. топливную ячейку
+				#autoLOC_US_StopFuelCell =	Выкл. топливную ячейку
+				#autoLOC_US_ToggleFuelCell = Перекл. топливную ячейку
 					
 					// FuelCellMedium
 						#autoLOC_US_FuelTankCellMedium_Title = Universal Storage: Щелочная топливная ячейка
@@ -122,9 +122,9 @@ Localization
 						#autoLOC_US_FuelTankCellSmall_Description = Это технология генерации э/э в ранней стадии разработки, Эта Протонно-Обменная Мембрана достигает впечатляющей эффективности в 50%. Пожалуйста воздержитесь от прикосновений к радиаторам.
 					
 			// RTGWedge
-				#autoLOC_US_RTGWedge_Title = Universal Storage: Радиоизотопный термоэлектрический генератор
+				#autoLOC_US_RTGWedge_Title = Universal Storage: РиТэГ
 				#autoLOC_US_RTGWedge_Tags = Universal Storage Electrical RTG Generator Radioactivity
-				#autoLOC_US_RTGWedge_Description = Долговременная и маломощная генерация э/э за счет радиоактивного распада, два РиТеГа в клиновидном исполнении.  Используется в средах, где солнечная энергия недоступна, или корабль слишком далеко от звезды.  Производит побочное тепло, которое необходимо утилизировать для обеспечения работы. Если бы такой был у Мэтта Кермана в "Дюнеанине" он бы сварился.
+				#autoLOC_US_RTGWedge_Description = Радиоизотопный Термоэлектрический Генератор. Долговременная и маломощная генерация э/э за счет радиоактивного распада, два РиТеГа в клиновидном исполнении.  Используется в средах, где солнечная энергия недоступна, или корабль слишком далеко от звезды.  Производит побочное тепло, которое необходимо утилизировать для обеспечения работы. Если бы такой был у Мэтта Кермана в "Дюнеанине" он бы сварился.
 		
 		
 		
@@ -138,22 +138,22 @@ Localization
 		
 		// Fuel Tank
 			// AerozineWedge
-				#autoLOC_US_AerozineWedge_Title = Universal Storage: Бак с жидким топливом
+				#autoLOC_US_AerozineWedge_Title = Universal Storage: Топливный бак
 				#autoLOC_US_AerozineWedge_Tags = Universal Storage Wedge Liquid Fuel Aerozine
 				#autoLOC_US_AerozineWedge_Description = Бак с жидким топливом и окислителем, выполненный в клиновидном исполнении для монтажа на Universal Storage основе. ЖТ+Ок может заправляться по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 			
 			// AerozineWedge
-				#autoLOC_US_HydrazineWedge_Title = Universal Storage: Бак с монотопливом
+				#autoLOC_US_HydrazineWedge_Title = Universal Storage: Монотопливный бак
 				#autoLOC_US_HydrazineWedge_Tags = Universal Storage Wedge Monoprop Hydrazine
 				#autoLOC_US_HydrazineWedge_Description = Монотопливный бак , выполненный в клиновидном исполнении для монтажа на Universal Storage основе. Монотопливо может заправляться по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 			
 			// HydrogenWedge
-				#autoLOC_US_HydrogenWedge_Title = Universal Storage: Бак с водородом
+				#autoLOC_US_HydrogenWedge_Title = Universal Storage: Водородный бак
 				#autoLOC_US_HydrogenWedge_Tags = Universal Storage Wedge Cryogenic Hydrogen
 				#autoLOC_US_HydrogenWedge_Description =  Хранилище ресурсов водорода, выполненное в клиновидном исполнении для монтажа на Universal Storage основе. Водород хранится в криогенном режиме, этот клин имеет изоляцию, а также криогенное оборудование и системы безопасности.  Баллоны с водородом могут заправляться  по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 				
 			// OxygenWedge
-				#autoLOC_US_OxygenWedge_Title = Universal Storage: Бак с кислородом
+				#autoLOC_US_OxygenWedge_Title = Universal Storage: Кислородный бак
 				#autoLOC_US_OxygenWedge_Tags = Universal Storage Wedge Cryogenic Oxygen
 				#autoLOC_US_OxygenWedge_Description = Хранилище ресурсов кислорода, выполненное в клиновидном исполнении для монтажа на Universal Storage основе.  Кислород хранится в криогенном режиме, этот клин имеет изоляцию, а также криогенное оборудование и системы безопасности.  Баллоны с кислородом могут заправляться  по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 				
@@ -178,7 +178,7 @@ Localization
 						#autoLOC_US_FoodWedgeUSI_Description = Набор жизнеобеспечения выполненный в клиновидном исполнении для монтажа на Universal Storage основе. Весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 					
 			// WaterWedge
-				#autoLOC_US_WaterWedge_Title = Universal Storage: Бак с водой
+				#autoLOC_US_WaterWedge_Title = Universal Storage: Водяной бак
 				#autoLOC_US_WaterWedge_Tags = Universal Storage Wedge Water
 				#autoLOC_US_WaterWedge_Description = Бак с водой, выполненный в клиновидном исполнении для монтажа на Universal Storage основе. Вода может заправляться по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 				
@@ -241,32 +241,32 @@ Localization
 					
 		// Payload			
 			// AdapterShroud0625
-				#autoLOC_US_AdapterShroud0625_Title = Universal Storage: Конический обтекатель (с 0,625м до 1,25м)
+				#autoLOC_US_AdapterShroud0625_Title = Universal Storage: Обтекатель (0,625м - 1,25м)
 				#autoLOC_US_AdapterShroud0625_Tags = Universal Storage Shroud Capsule Cap
 				#autoLOC_US_AdapterShroud0625_Description = Небольшая автономная система полезной нагрузки для использования с командными модулями. Четыре небольших отсека для груза с убирающимися обтекателями. Доступны в цветовых схемах Apollo, Gemini и Porkjet.
 			
 			// USAdaptorShroud1500
-				#autoLOC_US_AdapterShroud1500_Title = Universal Storage: Конический обтекатель (с 1,5м до 1,875м)
+				#autoLOC_US_AdapterShroud1500_Title = Universal Storage: Обтекатель (1,5м - 1,875м)
 				#autoLOC_US_AdapterShroud1500_Tags = Universal Storage Shroud Payload Gemini Service Module Bay Bluedog Design BDB
 				#autoLOC_US_AdapterShroud1500_Description = Большой служебный отсек в обтекателе с фиксированной высотой, конусовидный с 1.5м до 1.875м. Соединенный с  Universal Storage: Пятиместной основой (1.5м) он обеспечивает особое пространство с полезной нагрузкой для представленных Bluedog капсул Gemini. Так же он может использоваться отдельно, в нем просто много пространства для полезной нагрузки. Четыре больших двери обеспечивают отличный доступ к содержимому. Отлично подходит для игры в кербодесант.
 
 			// AdapterShroud1875
-				#autoLOC_US_AdapterShroud1875_Title = Universal Storage: Конический обтекатель (с 1.875м до 2.5м)
+				#autoLOC_US_AdapterShroud1875_Title = Universal Storage: Обтекатель (1.875м - 2.5м)
 				#autoLOC_US_AdapterShroud1875_Tags = Universal Storage Shroud Payload Gemini Service Module Bay
 				#autoLOC_US_AdapterShroud1875_Description =  Большой служебный отсек в обтекателе с фиксированной высотой, конусовидный с 2.5м до 1.875м. Соединенный с Universal Storage: Шестиместной основой (1.875м) дает много места для плезной нагрузки в огромных ракетах.  Так же он может использоваться отдельно, в нем просто много пространства для полезной нагрузки. Четыре больших двери обеспечивают удобный доступ к содержимому. Отлично подходит для игры в кербодесант.
 				
 			// CylindricalShroud125
-				#autoLOC_US_CylindricalShroud125_Title = Universal Storage: Цилиндрический обтекатель (1.25м)
+				#autoLOC_US_CylindricalShroud125_Title = Universal Storage: Обтекатель (1.25м)
 				#autoLOC_US_CylindricalShroud125_Tags = Universal Storage Shroud Payload
 				#autoLOC_US_CylindricalShroud125_Description = Раскрывающийся обтекатель, разработанный для аэродинамической защиты Universal Storage: Четырехместной основы (1.25м). Разместите снизу и переключите на необходимую вам высоту модуля. Сервисные двери доступны в миссии, могут быть сброшены в случае чрезвычайной ситуации. Доступны в цветовых схемах Apollo, Gemini, Porkjet и Saturn V.
 				
 			// CylindricalShroud250
-				#autoLOC_US_CylindricalShroud250_Title = Universal Storage: Цилиндрический обтекатель (2.5м)
+				#autoLOC_US_CylindricalShroud250_Title = Universal Storage: Обтекатель (2.5м)
 				#autoLOC_US_CylindricalShroud250_Tags = Universal Storage Shroud Payload
 				#autoLOC_US_CylindricalShroud250_Description = Раскрывающийся обтекатель, разработанный для аэродинамической защиты Universal Storage: Восьмиместной основы (2.5м). Разместите снизу и переключите на необходимую вам высоту модуля. Сервисные двери доступны в миссии, могут быть сброшены в случае чрезвычайной ситуации. Доступны в цветовых схемах Apollo, Gemini, Porkjet и Saturn V.	
 				
 			// CylindricalShroud250
-				#autoLOC_US_CylindricalShroud0625_Title = Universal Storage: Цилиндрический сервисный модуль (0,625м)
+				#autoLOC_US_CylindricalShroud0625_Title = Universal Storage: Сервисный модуль (0,625м)
 				#autoLOC_US_CylindricalShroud0625_Tags = Universal Storage Shroud Payload
 				#autoLOC_US_CylindricalShroud0625_Description = Маленький служебный отсек, подходит для небольшой научной аппаратуры и парашютов. Доступен в цветовых схемах Apollo, Gemini и Porkjet.
 				
