--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -46,14 +46,14 @@ Localization
 		#autoLOC_US_TogglePrimaryBays = Перекл. первичный отсек
 		#autoLOC_US_LockPrimaryBays = Заблок. первичный отсек
 		#autoLOC_US_UnlockPrimaryBays = Разблок. первичный отсек
-		#autoLOC_US_PrimaryBayDeployLimit = Раскрытие перв. отсека
+		#autoLOC_US_PrimaryBayDeployLimit = Лимит раскрытия перв.
 		
 		#autoLOC_US_DeploySecondaryBays = Открыть вторичный отсек
 		#autoLOC_US_RetractSecondaryBays = Закрыть вторичный отсек
 		#autoLOC_US_ToggleSecondaryBays = Перекл. вторичный отсек
 		#autoLOC_US_LockSecondaryBays = Заблок. вторичный отсек
 		#autoLOC_US_UnlockSecondaryBays = Разблок. вторичный отсек
-		#autoLOC_US_SecondaryBayDeployLimit = Раскрытие втор. отсека
+		#autoLOC_US_SecondaryBayDeployLimit = Лимит раскрытия втор.
 		
 		#autoLOC_US_DeployAntenna = Развернуть антенну
 		#autoLOC_US_RetractAntenna = Свернуть антенны
@@ -85,7 +85,7 @@ Localization
 			// USACD1500
 				#autoLOC_US_USACD1500_Title = Universal Storage: УКР (1.5м)
 				#autoLOC_US_USACD1500_Tags = Universal Storage Decoupler Stack Separator Reaction Wheel Gemini BDB Bluedog Design
-				#autoLOC_US_USACD1500_Description = Устройство Контрольно-Разделительное совмещает в себе стандартный разделитель, встроенный стабилизатор и гиродин в едином корпусе с пространством для прохода экипажа. Доступно в цветовых схемах Apollo, Gemini и Portkjet.
+				#autoLOC_US_USACD1500_Description = Устройство Контрольно-Разделительное совмещает в себе стандартный разделитель, встроенный стабилизатор и гиродин в едином корпусе с пространством для прохода экипажа. Разработан для 1.5м BDB Gemini или подобных крепежных профилей.
 			
 			// ADCSmall
 				#autoLOC_US_ACDSmall_Title = Universal Storage: УКР (1.25м)
