Update Universal Storage II/ru.cfg
Update

--- a/Universal Storage II/ru.cfg
+++ b/Universal Storage II/ru.cfg
@@ -1,4 +1,5 @@
 ﻿// Universal Storage Localization
+// Author: @Pkingtiger - Paul Kingtiger
 
 Localization
 {
@@ -64,13 +65,20 @@ Localization
 		
 		#autoLOC_US_PrimaryBayObstruction = Обнаружено препятствие:\n<<1>> заблокирована дверь первичного отсека <<2>>.\nПожалуйста очистите объект перед закрытием.
 		#autoLOC_US_SecondaryBayObstruction = Обнаружено препятствие:\n<<1>> заблокирована дверь вторичного отсека <<2>>.\nПожалуйста очистите объект перед закрытием.
+		
+		#autoLOC_US_SolarPanelCostField = Солнечная панель затраты
+		#autoLOC_US_ToggleSolarPanel = Перекл. Солнечную панель
 	
 	
 	// Parts	
 	// ------------------------------------------------------------------------------------
 
-	
-	
+		// Command
+			// USDoubleProbeCore
+				#autoLOC_US_USDoubleProbeCore_Title = Universal Storage: СОС-КА
+				#autoLOC_US_USDoubleProbeCore_Tags = Universal Storage Probe Core Command Reaction Wheel
+				#autoLOC_US_USDoubleProbeCore_Description = Спутниковая Операционная Система - Космических Аппаратов представляет собой полностью автономный искусственный мозг. Способен контролировать ориентацию, осуществлять дистанционное управление и выполнять роль опытного пилота; это наиболее продвинутая система беспилотного управления выполненная в клиновидном исполнении. Имеет двойную высоту.
+				
 		// Coupling
 			// ACDLarge	
 				#autoLOC_US_ACDLarge_Title = Universal Storage: УКР (2.5м)
@@ -152,11 +160,17 @@ Localization
 				#autoLOC_US_HydrogenWedge_Tags = Universal Storage Wedge Cryogenic Hydrogen
 				#autoLOC_US_HydrogenWedge_Description =  Хранилище ресурсов водорода, выполненное в клиновидном исполнении для монтажа на Universal Storage основе. Водород хранится в криогенном режиме, этот клин имеет изоляцию, а также криогенное оборудование и системы безопасности.  Баллоны с водородом могут заправляться  по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 				
+				// Hydrogen [Kerbalism]
+					#autoLOC_US_HydrogenWedgeKerbalism_Tags = Universal Storage Wedge Cryogenic Hydrogen Kerbalism
+				
 			// OxygenWedge
 				#autoLOC_US_OxygenWedge_Title = Universal Storage: Кислородный бак
 				#autoLOC_US_OxygenWedge_Tags = Universal Storage Wedge Cryogenic Oxygen
 				#autoLOC_US_OxygenWedge_Description = Хранилище ресурсов кислорода, выполненное в клиновидном исполнении для монтажа на Universal Storage основе.  Кислород хранится в криогенном режиме, этот клин имеет изоляцию, а также криогенное оборудование и системы безопасности.  Баллоны с кислородом могут заправляться  по линиям, или весь клин можно удалить на EVA и разместить с новым оборудованием или в хранилище. Доступны четыре варианта размера.
 				
+				// Oxygen [Kerbalism]
+					#autoLOC_US_OxygenWedgeKerbalism_Tags = Universal Storage Wedge Cryogenic Oxygen Kerbalism	
+		
 		
 		// Utility
 			// FoodWedge
@@ -205,7 +219,6 @@ Localization
 				
 					// Sabatier [Kerbalism]
 						#autoLOC_US_SabatierKerbalism_Tags = Universal Storage Processor Sabatier Kerbalism
-						
 						#autoLOC_US_SabatierReactor = Реактор Сабатье
 						#autoLOC_US_StartSabatier = Запустить реактор
 						#autoLOC_US_StopSabatier = Остановить Реактор
@@ -338,7 +351,35 @@ Localization
 				// SolidWasteWedge [Kerbalism]
 					#autoLOC_US_US_SolidWasteWedgeKerbalism_Tags = Universal Storage Wedge Supply Waste Kerbalism
 				
+		// Science
+			// USThermoBaroWedge
+				#autoLOC_US_USThermoBaroWedge_Title = Universal Storage: Атмосферный Научный Прибор
+				#autoLOC_US_USThermoBaroWedge_Tags = Universal Storage Science 
+				#autoLOC_US_USThermoBaroWedge_Description = Атмосферный Научный Прибор (АНП) совмещает в себе сенсоры температуры и давления, выполнен в клиновидном исполнении. 
 
+			// USMatBayWedge
+				#autoLOC_US_USMatBayWedge_Title = Universal Storage: Улучшеное Научный Модуль
+				#autoLOC_US_USMatBayWedge_Tags = Universal Storage Science 
+				#autoLOC_US_USMatBayWedge_Description = Улучшеный Научный Модуль содержит те же самые сенсоры и эксперименты что и стандартный научный модуль наблюдения за материалами, в клиновидном исполнении. В отличие от обычного, усовершенствованный модуль содержит оборудование для проведения и хранения двух экспериментов, в которых используются общие компоненты для снижения стоимости и массы.
+
+			// USGooBayWedge
+				#autoLOC_US_USGooBayWedge_Title = Universal Storage: Улучшеная Таинственная Слизь
+				#autoLOC_US_USGooBayWedge_Tags = Universal Storage Science 
+				#autoLOC_US_USGooBayWedge_Description = Модуль Улучшеная Таинственная Слизь содержит два резервуара, оба могут использоваться для хранения данных.
+
+			// USFluidSpectroWedge
+				#autoLOC_US_USFluidSpectroWedge_Title = Universal Storage: Атмосферный Спектровариометр
+				#autoLOC_US_USFluidSpectroWedge_Tags = Universal Storage Science 
+				#autoLOC_US_USFluidSpectroWedge_Description = АС содержит различные сенсоры и материалы для анализа образцов газа.
+
+			// USAccelGravWedge
+				#autoLOC_US_USAccelGravWedge_Title = Universal Storage: Физический Научный Модуль
+				#autoLOC_US_USAccelGravWedge_Tags = Universal Storage Science 
+				#autoLOC_US_USAccelGravWedge_Description = Физический Научный Модуль совмещает в себе детектор частиц Гравиоли и Акселерометр, создан для уменьшения стоимости и веса.
+				
+				
+				
+				
 	// KSPedia
 	// ------------------------------------------------------------------------------------
 		
@@ -400,6 +441,19 @@ Localization
 			#autoLOC_US_KSPedia_Wedges2_KISText = Большинство клиньев можно удалить и установить с помощью KIS.
 			#autoLOC_US_KSPedia_Wedges2_Locker = Регулируемый шкаф для инвентаря KIS. Доступны версии с радиальным креплением и клинья.
 			#autoLOC_US_KSPedia_Wedges2_Pack = KIS EVA Расширение, с ресурсами жизнеобеспечения и встроенной, маломощной антенной.
+		
+		// Science
+			#autoLOC_US_KSPedia_Science_Header = Universal Storage Научный
+			#autoLOC_US_KSPedia_Science_Subheader = Все стоковые научные модули в клиновидном исполнении
+			#autoLOC_US_KSPedia_Science_Combined = Комбинированные научные модули
+			#autoLOC_US_KSPedia_Science_CombinedText = Эти два модуля содержат два эксперимента в каджом. В остальном они функционируют так же, как и любой другой эксперимент.
+			#autoLOC_US_KSPedia_Science_ThermoBaro = Термометр / Барометр
+			#autoLOC_US_KSPedia_Science_AccelGrav = Акселерометр / Гравиоли
+			#autoLOC_US_KSPedia_Science_Atmos = Атмосферный Спектровариометр
+			#autoLOC_US_KSPedia_Science_Advanced = Улучшенные научные модули
+			#autoLOC_US_KSPedia_Science_AdvancedText = Эксперименты со Слизью и наблюдения за материалами могут хранить несколько образцов.
+			#autoLOC_US_KSPedia_Science_Mat = Наблюдение за материалами - Может проводить два опыта и хранить результаты одновременно.
+			#autoLOC_US_KSPedia_Science_Goo = Таинственная Слизь - Имеет ресурсы для двух экспериментов, но может проводить только один за раз.
 		
 		// Demo
 			#autoLOC_US_KSPedia_Demo_Header = Собирать все вместе
